syntax = "proto3";
package tendermint.oracle;

option go_package = "github.com/cometbft/cometbft/proto/tendermint/oracle";

message Vote {
  string validator = 1;
  string oracle_id = 2;
  uint64 timestamp = 3;
  string data = 4;
}

message GossipVote {
  string validator = 1;
  bytes public_key = 2;
  string sign_type = 3;
  repeated Vote votes = 4;
  uint64 signed_timestamp = 5;
  bytes signature = 6;
}

message CanonicalGossipVote {
  string validator = 1;
  bytes public_key = 2;
  string sign_type = 3;
  repeated Vote votes = 4;
}
